--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="public/css/styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <!-- Menu de navegação (inicialmente oculto) -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary d-none" id="main-navbar">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold fs-4" href="#">
                 <i class="bi bi-folder-check me-2"></i>
@@ -66,21 +67,36 @@
     <div class="container mt-4">
         <!-- Tela de Login -->
         <div id="login-screen" class="card shadow">
-            <div class="card-header bg-primary text-white">
-                <h5>Login e Senha de Acesso</h5>
+            <div class="card-header bg-primary text-white text-center">
+                <h5 class="mb-0">Login e Senha de Acesso</h5>
             </div>
             <div class="card-body">
+                <div class="text-center mb-4">
+                    <i class="bi bi-shield-lock text-primary" style="font-size: 3rem;"></i>
+                    <h4 class="mt-2">Sistema de Controle de Processos</h4>
+                    <p class="text-muted">Digite suas credenciais para acessar o sistema</p>
+                </div>
                 <form id="login-form">
                     <div class="mb-3">
                         <label for="username" class="form-label">Usuário:</label>
-                        <input type="text" class="form-control" id="username" required>
+                        <div class="input-group">
+                            <span class="input-group-text"><i class="bi bi-person"></i></span>
+                            <input type="text" class="form-control" id="username" placeholder="Digite seu usuário" required>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Senha:</label>
-                        <input type="password" class="form-control" id="password" required>
+                        <div class="input-group">
+                            <span class="input-group-text"><i class="bi bi-key"></i></span>
+                            <input type="password" class="form-control" id="password" placeholder="Digite sua senha" required>
+                        </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Entrar</button>
-                    <a href="#" class="ms-2 text-danger">Usuário bloqueado? Esqueceu sua senha?</a>
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn btn-primary btn-lg">Entrar</button>
+                    </div>
+                    <div class="text-center mt-3">
+                        <a href="#" class="text-danger">Usuário bloqueado? Esqueceu sua senha?</a>
+                    </div>
                 </form>
             </div>
         </div>
