--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="public/js/debug.js"></script>
     <script src="public/js/main.js"></script>
 </body>
 </html> 
